# MOR

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  frame.md  vcpkg.json
core/: CMakeLists.txt
core/include/: vector.hpp
core/include/framework/core/: matrix.hpp  parallelContext.hpp  vector.hpp
core/src/: matrix.cpp  vector.cpp
